# leakage-moving-target-research

./: .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
demos/: 01_structural_vs_time_leakage.py  02_identity_leakage.py  03_look_ahead_cheat.py  04_permutation_invariance.py  05_window_robustness.py
paper/: paper.md  references.bib
src/leakage_harness/: __init__.py  backtest.py  fixtures.py  leakage_tests.py  losses.py  stability_tests.py  strategy_net.py  walk_forward.py
