[project]
name = "leakage-harness"
version = "0.1.0"
description = "Negative-control gates for differentiable cross-sectional trading — runnable companion to the paper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "torch>=2.0,<2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leakage_harness"]
